--- a/src/pages/About/Act/act.css
+++ b/src/pages/About/Act/act.css
@@ -14,6 +14,10 @@
     margin-top: 70px;
 }
 
+h3{
+  text-align: center;
+}
+
 /* Two Columns on Small Phones */
 @media (max-width: 480px) {
     .header-section h1 {
