--- a/src/pages/About/Annualreports/annualreports.css
+++ b/src/pages/About/Annualreports/annualreports.css
@@ -17,6 +17,10 @@ body {
 .header-section {
     margin-top: 70px;
 }
+
+h3{
+  text-align: center;
+}
 /* Add these styles to your existing CSS */
 
 /* Add this to your existing CSS */
