--- a/src/pages/About/Procedures/procedures.css
+++ b/src/pages/About/Procedures/procedures.css
@@ -24,6 +24,10 @@ body {
   margin-top: 30px;
 }
 
+h3{
+  text-align: center;
+}
+
 /* Procedures Section */
 .act-wrapper {
   background-color: #fff;
