--- a/src/pages/About/Righttoinformation/righttoinformation.css
+++ b/src/pages/About/Righttoinformation/righttoinformation.css
@@ -13,6 +13,10 @@ body {
     margin-top: 70px;
 }
 
+h3{
+  text-align: center;
+}
+
 /* Two Columns on Small Phones */
 @media (max-width: 480px) {
     .header-section h1 {
