--- a/src/pages/About/Visionmission/visionmission.css
+++ b/src/pages/About/Visionmission/visionmission.css
@@ -46,6 +46,9 @@ body {
     margin-bottom: 0; /* Reduce extra space under the navigation bar */
   }
   
+  h3{
+  text-align: center;
+}
   .vision-mission-h2 {
     text-align: center;
     font-weight: bold; /* Corrected "bolder" to "bold" */
